kinda fixed layout issue?

--- a/css/index.css
+++ b/css/index.css
@@ -195,11 +195,13 @@ nav a{
     display:flex;
     flex-wrap:wrap;
     margin:30px 0;
-    justify-content:space-around;
+    justify-content:space-between;
 }
 
 .learn-more section{
-    width:390px;
+    display:flex;
+    flex-direction:column;
+    width:380px;
     padding:20px 0;
     font-size:12px;
 }
@@ -207,13 +209,9 @@ nav a{
 .learn-more section img, p {
     margin-bottom:10px;
 }
-
-.learn-more img{
-    height:200px;
-}
-
-.learn-more section p{
-    width:320px;
+.learn-more p{
+    width:300px;
+    font-size:14px;
 }
 
 .dotted{
@@ -223,11 +221,12 @@ nav a{
 .button-learn{
     text-decoration:none;
     color:black;
-    width:200px;
+    width:120px;
     border-radius:15px;
-    border:1px solid black;
+    border:2px solid black;
     font-size:12px;
-    padding:5px 20px;
+    padding:10px 20px;
+    text-align:center;
 
 }
 
